--- a/index.html
+++ b/index.html
@@ -250,41 +250,6 @@
 
                   </td>
                 </tr>
-                <!--TASLP -->
-                <<!-- tr>
-                    <td width="40%">
-                      <img src="images/TASLP.png" width="100%">
-                    </td>
-                    <td width="60%" valign="middle">
-                      <div class="title">
-                        <b>High-order Pair-wise Aspect and Opinion Terms Extraction with Edge-enhanced Syntactic Graph Convolution</b>
-                      </div>
-                      <div class="authors">
-                         <u><strong>ShengqiongWu</strong></u>, Hao Fei, Yafeng Ren, Bobo Li, Fei Li and Donghong Ji.<br>
-                      </div>
-                      <div class="venue">
-                          <strong>Unpublished paper</strong>. Under revision to submission. <br>
-                            * Please contact me before download.
-                      </div>
-                    </td>
-                  </tr> -->
-                  <!-- <tr>
-                      <td width="40%">
-                        <img src="images/NEUCOM.png" width="100%">
-                      </td>
-                      <td width="60%" valign="middle">
-                        <div class="title">
-                          <b>Neural Transition Model for Aspect-based Sentiment Triplet Extraction with Triplet Memory</b>
-                        </div>
-                        <div class="authors">
-                           <u><strong>ShengqiongWu</strong></u>, Bobo Lia, Dongdong Xie, Chong Teng, Donghong Ji.<br>
-                        </div>
-                        <div class="venue">
-                            <strong>Unpublished paper</strong>. Under revision to submission. <br>
-                            * Please contact me before download.
-                        </div>
-                      </td>
-                  </tr> -->
 
         </table>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -319,7 +284,7 @@
                     </td>
         
                     <td width="30%">
-                          <img src="images/YITU.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                          <img src="images/yitu.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                     </td>
                 </tr>
               </tbody>
