--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <u><strong>Shengqiong Wu</strong></u>, Hao Fei,  Yafeng Ren, Donghong Ji, Jingye Li.&nbsp&nbsp<em>Learn from Syntax: Improving Pair-wise Aspect and Opinion Terms Extraction with Rich Syntactic Knowledge</em>. In Proceedings of <strong>IJCAI</strong>. 2021.(long online)
+                  <u><strong>Shengqiong Wu</strong></u>, Hao Fei,  Yafeng Ren, Donghong Ji, Jingye Li.&nbsp&nbsp<em>Learn from Syntax: Improving Pair-wise Aspect and Opinion Terms Extraction with Rich Syntactic Knowledge</em>. In Proceedings of <strong>IJCAI</strong>. 2021.&nbsp&nbsp(long, online)
                 </div>
                 
                 <!-- <div class="title">
@@ -198,7 +198,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                   Hao Fei, <u><strong>ShengqiongWu</strong></u>, Yafeng Ren, Fei Li and Donghong Ji.&nbsp&nbsp<em>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</em>. In Findings of <strong>ACL-IJCNIP</strong>. 2021.  (long, online)
+                   Hao Fei, <u><strong>ShengqiongWu</strong></u>, Yafeng Ren, Fei Li and Donghong Ji.&nbsp&nbsp<em>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</em>. In Findings of <strong>ACL-IJCNIP</strong>. 2021.&nbsp&nbsp(long, online)
                 </div>
                 <!-- <div class="title">
                   <b>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</b>
@@ -219,7 +219,7 @@
                 </td>
                 <td width="70%" valign="middle">
                   <div class="title">
-                    Hao Fei, Yafeng Ren, Bobo Li, <u><strong>ShengqiongWu</strong></u>, Donghong Ji.&nbsp&nbsp<em>Latent Target-Opinion as Prior for Document-Level Sentiment Classification: A Variational Approach from Fine-Grained Perspective</em>. In Proceedings of <b>WWW</b>. 2021.(long, online) 
+                    Hao Fei, Yafeng Ren, Bobo Li, <u><strong>ShengqiongWu</strong></u>, Donghong Ji.&nbsp&nbsp<em>Latent Target-Opinion as Prior for Document-Level Sentiment Classification: A Variational Approach from Fine-Grained Perspective</em>. In Proceedings of <b>WWW</b>. 2021.&nbsp&nbsp(long, online) 
                   </div>
                   <!-- <div class="title">
                     <b>Latent Target-Opinion as Prior for Document-Level Sentiment Classification: A Variational Approach from Fine-Grained Perspective</b>
@@ -239,7 +239,7 @@
                   </td>
                   <td width="70%" valign="middle">
                     <div class="title">
-                      <u><strong>ShengqiongWu</strong></u>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.(long, oral)
+                      <u><strong>ShengqiongWu</strong></u>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.&nbsp&nbsp(long, oral)
                     </div>
                     <!-- <div class="title">
                       <b>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</b>
@@ -320,7 +320,7 @@
               <heading>Skills and MISC</heading><br><br>
               <li>
                 <b>Coding</b><br>
-                <img src="images/python.png">&nbsp&nbsp&nbsp&nbsp <img src="images/java.png">&nbsp&nbsp&nbsp&nbsp <img src="images/html.png">&nbsp&nbsp&nbsp&nbsp <img src="images/css.png">,&nbsp&nbsp&nbsp&nbsp <img src="images/js.png">...
+                <img src="images/python.png">&nbsp&nbsp&nbsp&nbsp <img src="images/java.png">&nbsp&nbsp&nbsp&nbsp <img src="images/latex.png">&nbsp&nbsp&nbsp&nbsp <img src="images/markdown.png">&nbsp&nbsp&nbsp&nbsp <img src="images/html.png">&nbsp&nbsp&nbsp&nbsp <img src="images/css.png">&nbsp&nbsp&nbsp&nbsp <img src="images/js.png">...
               </li>
               <li>
                 <b>Deep Learning</b><br>
