--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="mailto:whuwsq@whu.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/ChocoWu">Github</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">DBLP</a> &nbsp/&nbsp
-                <a href="data/wsq.pdf">CV</a> &nbsp
+                <a href="data/CV_wsq.pdf">CV</a> &nbsp
                 
               </p>
             </td>
