--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <p align=center>
                 <a href="mailto:whuwsq@whu.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/ChocoWu">Github</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">DBLP</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="data/CV_wsq.pdf">CV</a> &nbsp
                 
               </p>
@@ -322,7 +322,7 @@
               <heading>Skills and MISC</heading><br><br>
               <li>
                 <b>Coding</b><br>
-                <img src="images/python.png">&nbsp&nbsp&nbsp&nbsp <img src="images/java.png">&nbsp&nbsp&nbsp&nbsp <img src="images/latex.png">&nbsp&nbsp&nbsp&nbsp <img src="images/markdown.png">&nbsp&nbsp&nbsp&nbsp <img src="images/html.png">&nbsp&nbsp&nbsp&nbsp <img src="images/css.png">&nbsp&nbsp&nbsp&nbsp <img src="images/js.png">...
+                <img src="images/python.png">&nbsp&nbsp&nbsp&nbsp <img src="images/java.png">&nbsp&nbsp&nbsp&nbsp <img src="images/latex.png">&nbsp&nbsp&nbsp&nbsp <img src="images/markdown.png">&nbsp&nbsp&nbsp&nbsp <img src="images/html.png">&nbsp&nbsp&nbsp&nbsp <img src="images/css.png">&nbsp&nbsp&nbsp&nbsp <img src="images/js.png">&nbsp&nbsp&nbsp&nbsp <img src="images/ubuntu.png">...
               </li>
               <li>
                 <b>Deep Learning</b><br>
@@ -330,7 +330,7 @@
               </li>
               <li>
                 <b>Hobby</b><br>
-                <img src="images/Badminton.png">&nbsp&nbsp&nbsp&nbsp <img src="images/Table_tennis.png">...
+                <img src="images/badminton.png">&nbsp&nbsp&nbsp&nbsp <img src="images/table_tennis.png">...
               </li>
       
             </td>
