--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <p align="center">
                 <name>Shengqiong Wu (吴胜琼)</name>
               </p>
-              <p>I am currently a M.S. student advised by <a href="http://cse.whu.edu.cn/index.php?s=/home/szdw/detail/id/78.html"> Prof. Donghong Ji </a> in School of Cyber Science and Engineering at <a href="https://www.whu.edu.cn/">Wuhan University</a>, after I finished my undergraduate study at  <a href="http://cs.whu.edu.cn/">  the School of Computer Science </a>, Wuhan University.
+              <p>I am currently a M.S. student advised by <a href="https://scholar.google.com/citations?user=2Q-7u3AAAAAJ"> Prof. Donghong Ji </a> in <a href="http://cse.whu.edu.cn">School of Cyber Science and Engineering</a> at <a href="https://www.whu.edu.cn/">Wuhan University</a>, after I finished my undergraduate study at  <a href="http://cs.whu.edu.cn/">  the School of Computer Science </a>, Wuhan University.
               </p>
               <p>
                 I am currently working on <strong>Opinion Mining</strong> and <strong>Sentiment Analysis</strong>, and partially <strong>Syntax Parsing</strong>.
