--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <u><strong>Shengqiong Wu</strong></u>, Hao Fei, Yafeng Ren, Bobo Li, Fei Li and Donghong Ji.&nbsp&nbsp<em> High-order Pair-wise Aspectand Opinion Terms Extraction with Edge-enhanced Syntactic Graph Convolution</em>.  IEEE <strong>TASLP</strong>. 2021.
+                  <u><strong>Shengqiong Wu</strong></u>, Hao Fei, Yafeng Ren, Bobo Li, Fei Li and Donghong Ji.&nbsp&nbsp<em> High-order Pair-wise Aspectand Opinion Terms Extraction with Edge-enhanced Syntactic Graph Convolution</em>.  IEEE/ACM <strong>TASLP</strong>. 2021.
                 </div>
                 
                 <!-- <div class="title">
