--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <a href="mailto:swu@u.nus.edu">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/ChocoWu">Github</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="data/CV_wsq.pdf">CV</a> &nbsp
+<!--                 <a href="data/CV_wsq.pdf">CV</a> &nbsp -->
                 
               </p>
             </td>
