--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <u><strong>Shengqiong Wu</strong></u>, Bobo Li, Dongdong Xie, Chong Teng and Donghong Ji.&nbsp&nbsp<em>Neural Transition Model for Aspect-based Sentiment Triplet Extraction with Triplet Memory</em>. <strong>Neurocomputing</strong>. 2021.&nbsp&nbsp<a href="https://www.sciencedirect.com/science/article/pii/S0925231221011887">[pdf]</a>
                   </li>
                   <li>
-                    Hao Fei, <u><strong>ShengqiongWu</strong></u>, Yafeng Ren, Fei Li and Donghong Ji.&nbsp&nbsp<em>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</em>. In Findings of <strong>ACL-IJCNIP</strong>. 2021.&nbsp&nbsp(long, online)
+                    Hao Fei, <u><strong>ShengqiongWu</strong></u>, Yafeng Ren, Fei Li and Donghong Ji.&nbsp&nbsp<em>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</em>. In Findings of <strong>ACL-IJCNIP</strong>. 2021.&nbsp&nbsp(long, online) <a href="https://github.com/scofield7419/HeSyFu">[Code]</a><a href="https://aclanthology.org/2021.findings-acl.49/">[pdf]</a>
                   </li>
                 </ul>
                 </td>
