--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       height: 30;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/WHU.png">
+  <link rel="icon" type="image/png" href="images/wsq.png">
   <title>Shengqiong Wu</title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -109,14 +109,15 @@
               <p>I am currently a Ph.D. student advised by <a href="https://www.chuatatseng.com/"> Prof. Chua Tat Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I finished my master study at  <a href="http://cse.whu.edu.cn">  School of Cyber Science and Engineering </a>, <a href="https://www.whu.edu.cn/">Wuhan University</a>.
               </p>
               <p>
-                I am currently working on <strong>Multi-modal Information Extraction</strong>, and <strong>Opinion Mining and Sentiment Analysis</strong>.
+                Currently, my research interests lie in <strong>vision-language understanding</strong>, such as <strong>multi-modal information extraction</strong>, <strong>text-to-image generation</strong>, <strong>scene graph generation</strong>, etc.
                 Previously, I focused on syntax-aided NLP, i.e., employing the external syntactic and linguistic features to aid NLP tasks.
               </p> 
               
               <p align=center>
                 <a href="mailto:swu@u.nus.edu">Email</a> &nbsp/&nbsp
                 <a href="https://github.com/ChocoWu">Github</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">Google Scholar</a>
+<!--                &nbsp/&nbsp-->
 <!--                 <a href="data/CV_wsq.pdf">CV</a> &nbsp -->
                 
               </p>
@@ -191,6 +192,26 @@
         <!-- cellpadding="20" -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
             <tbody>
+
+              <tr>
+                <td width="100%"><strong>2023</strong></td>
+              </tr>
+              <tr>
+                <td width="100%">
+                <ul>
+                  <li>
+                    Leigang Qu*, <strong>Shengqiong Wu*</strong>, Hao Fei, Liqiang Nie, Tat-Seng Chua.&nbsp&nbsp<em>LayoutLLM-T2I: Eliciting Layout Guidance from LLM for Text-to-Image Generation</em>. In Proceedings of <strong>ACM MM</strong>. 2023.&nbsp&nbsp(*: equal contribution, long)&nbsp&nbsp<a href="https://layoutllm-t2i.github.io/">[Code]</a><a href="https://arxiv.org/pdf/2308.05095.pdf">[pdf]</a>
+                  </li>
+                  <li>
+                    <strong>Shengqiong Wu</strong>, Hao Fei, Yixin Cao, Lidong Bing, Tat-Seng Chua.&nbsp&nbsp<em>Information Screening whilst Exploiting! Multimodal Relation Extraction with Feature Denoising and Multimodal Topic Modeling</em>. In Proceedings of <strong>ACL</strong>. 2023.&nbsp&nbsp(long, poster, best paper nomination, 1.6%)&nbsp&nbsp<a href="https://github.com/ChocoWu/MRE-ISE">[Code]</a><a href="https://aclanthology.org/2023.acl-long.823.pdf">[pdf]</a>
+                  </li>
+                  <li>
+                   <strong>Shengqiong Wu</strong>, Hao Fei, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>Cross2StrA: Unpaired Cross-lingual Image Captioning with Cross-lingual Cross-modal Structure-pivoted Alignment</em>. In Proceedings of <strong>ACL</strong>. 2023.&nbsp&nbsp(long, oral)&nbsp&nbsp<a href="https://aclanthology.org/2023.acl-long.146.pdf">[pdf]</a>
+                  </li>
+                </ul>
+                </td>
+              </tr>
+
               <tr>
                 <td width="100%"><strong>2022</strong></td>
               </tr>
@@ -198,10 +219,13 @@
                 <td width="100%">
                 <ul>
                   <li>
-                    Shunjie Chen, Xiaochuan Shi, Jingye Li, <strong>Shengqiong Wu</strong>, Hao Fei, Fei Li, Donghong Ji.&nbsp&nbsp<em>Joint Alignment of Multi-Task Feature and Label Spaces for Emotion Cause Pair Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, poster)<a href="https://github.com/csj199813/A2Net_ECPE">[Code]</a><a href="https://arxiv.org/abs/2209.04112">[pdf]</a>
+                    Hao Fei, <strong>Shengqiong Wu</strong>, Jingye Li, Bobo Li, Fei Li, Libo Qin, Meishan Zhang, Min Zhang, Tat-Seng Chua.&nbsp&nbsp<em>LasUIE: Unifying information extraction with latent adaptive structure-aware generative language model</em>. In Proceedings of <strong>NeurIPS</strong>. 2022.&nbsp&nbsp(long, poster) <a href="https://github.com/ChocoWu/LasUIE">[Code]</a><a href="https://proceedings.neurips.cc/paper_files/paper/2022/file/63943ee9fe347f3d95892cf87d9a42e6-Paper-Conference.pdf">[pdf]</a>
                   </li>
                   <li>
-                    Hu Cao, Jingye Li, Fangfang Su, Fei Li, Hao Fei, <strong>Shengqiong Wu</strong>, Bobo Li, Liang Zhao and Donghong Ji.&nbsp&nbsp<em>OneEE: A One-Stage Framework for Fast Overlapping and Nested Event Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, oral)<a href="https://github.com/Cao-Hu/OneEE">[Code]</a><a href="https://arxiv.org/abs/2209.02693">[pdf]</a>
+                    Shunjie Chen, Xiaochuan Shi, Jingye Li, <strong>Shengqiong Wu</strong>, Hao Fei, Fei Li, Donghong Ji.&nbsp&nbsp<em>Joint Alignment of Multi-Task Feature and Label Spaces for Emotion Cause Pair Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, poster) <a href="https://github.com/csj199813/A2Net_ECPE">[Code]</a><a href="https://arxiv.org/abs/2209.04112">[pdf]</a>
+                  </li>
+                  <li>
+                    Hu Cao, Jingye Li, Fangfang Su, Fei Li, Hao Fei, <strong>Shengqiong Wu</strong>, Bobo Li, Liang Zhao and Donghong Ji.&nbsp&nbsp<em>OneEE: A One-Stage Framework for Fast Overlapping and Nested Event Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, oral) <a href="https://github.com/Cao-Hu/OneEE">[Code]</a><a href="https://arxiv.org/abs/2209.02693">[pdf]</a>
                   </li>
                   <li>
                     <strong>Shengqiong Wu</strong>, Hao Fei, Fei Li, Meishan Zhang, Yijiang Liu, Chong Teng, Donghong Ji.&nbsp&nbsp<em>Mastering the Explicit Opinion-Role Interaction: Syntax-Aided Neural Transition System for Unified Opinion Role Labeling</em>. In Proceedings of <strong>AAAI</strong>. 2022.&nbsp&nbsp(long, online) <a href="https://github.com/ChocoWu/SyPtrTrans-ORL">[Code]</a><a href="https://ojs.aaai.org/index.php/AAAI/article/view/21404">[pdf]</a>
@@ -223,13 +247,13 @@
                     <strong>Shengqiong Wu</strong></u>, Hao Fei,  Yafeng Ren, Donghong Ji, Jingye Li.&nbsp&nbsp<em>Learn from Syntax: Improving Pair-wise Aspect and Opinion Terms Extraction with Rich Syntactic Knowledge</em>. In Proceedings of <strong>IJCAI</strong>. 2021.&nbsp&nbsp(long, online) <a href="https://github.com/ChocoWu/Synfue-PAOTE">[Code]</a><a href="https://arxiv.org/pdf/2105.02520.pdf">[pdf]</a>
                   </li>
                   <li>
-                      <u><strong>Shengqiong Wu</strong></u>, Hao Fei, Yafeng Ren, Bobo Li, Fei Li and Donghong Ji.&nbsp&nbsp<em> High-order Pair-wise Aspectand Opinion Terms Extraction with Edge-enhanced Syntactic Graph Convolution</em>.  IEEE/ACM <strong>TASLP</strong>. 2021.<a href="https://github.com/ChocoWu/ESGCN-AOP">[Code]</a><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9478183">[pdf]</a>
+                      <strong>Shengqiong Wu</strong>, Hao Fei, Yafeng Ren, Bobo Li, Fei Li and Donghong Ji.&nbsp&nbsp<em> High-order Pair-wise Aspectand Opinion Terms Extraction with Edge-enhanced Syntactic Graph Convolution</em>.  IEEE/ACM <strong>TASLP</strong>. 2021. <a href="https://github.com/ChocoWu/ESGCN-AOP">[Code]</a><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9478183">[pdf]</a>
                   </li>
                   <li>
-                    <u><strong>Shengqiong Wu</strong></u>, Bobo Li, Dongdong Xie, Chong Teng and Donghong Ji.&nbsp&nbsp<em>Neural Transition Model for Aspect-based Sentiment Triplet Extraction with Triplet Memory</em>. <strong>Neurocomputing</strong>. 2021.&nbsp&nbsp<a href="https://www.sciencedirect.com/science/article/pii/S0925231221011887">[pdf]</a>
+                    <strong>Shengqiong Wu</strong>, Bobo Li, Dongdong Xie, Chong Teng and Donghong Ji.&nbsp&nbsp<em>Neural Transition Model for Aspect-based Sentiment Triplet Extraction with Triplet Memory</em>. <strong>Neurocomputing</strong>. 2021.&nbsp&nbsp <a href="https://www.sciencedirect.com/science/article/pii/S0925231221011887">[pdf]</a>
                   </li>
                   <li>
-                    Hao Fei, <u><strong>ShengqiongWu</strong></u>, Yafeng Ren, Fei Li and Donghong Ji.&nbsp&nbsp<em>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</em>. In Findings of <strong>ACL-IJCNIP</strong>. 2021.&nbsp&nbsp(long, online) <a href="https://github.com/scofield7419/HeSyFu">[Code]</a><a href="https://aclanthology.org/2021.findings-acl.49/">[pdf]</a>
+                    Hao Fei, <strong>ShengqiongWu</strong>, Yafeng Ren, Fei Li and Donghong Ji.&nbsp&nbsp<em>Better Combine Them Together! Integrating Syntactic Constituency and Dependency Representations for Semantic Role Labeling</em>. In Findings of <strong>ACL-IJCNIP</strong>. 2021.&nbsp&nbsp(long, online) <a href="https://github.com/scofield7419/HeSyFu">[Code]</a><a href="https://aclanthology.org/2021.findings-acl.49/">[pdf]</a>
                   </li>
                 </ul>
                 </td>
@@ -242,7 +266,7 @@
               <tr>
                 <td width="100%"><ul>
                   <li>
-                    <u><strong>ShengqiongWu</strong></u>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.&nbsp&nbsp(long, oral)<a href="https://github.com/ChocoWu/ALD-TN">[Code]</a><a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60450-9_54">[pdf]</a>
+                    <strong>ShengqiongWu</strong>, Hao Fei and Donghong Ji.&nbsp&nbsp<em>Aggressive Language Detection with Joint Text Normalization via Adversarial Multi-task Learning</em>. In Proceedings of <b>NLPCC</b>. 2020.&nbsp&nbsp(long, oral)<a href="https://github.com/ChocoWu/ALD-TN">[Code]</a><a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60450-9_54">[pdf]</a>
                   </li>
                 </ul></td>
               </tr>
@@ -299,8 +323,9 @@
           <tbody><tr>
             <td width="100%" valign="middle">
               <heading>Honors &amp; Awards</heading><br><br>
-              <li>[2022] &nbsp&nbsp President's Graduate Fellowship </li>
-              <li>[2022] &nbsp&nbsp Excellent Graduated Graduate Student</li>
+              <li>[2023] &nbsp&nbsp Research Achievement Award.</li>
+              <li>[2022] &nbsp&nbsp President's Graduate Fellowship. </li>
+              <li>[2022] &nbsp&nbsp Excellent Graduated Graduate Student.</li>
               <li>[2021] &nbsp&nbsp Huawei Scholarship for graduate students.</li>
               <li>[2021] &nbsp&nbsp National Scholarship for graduate students.</li>
               <li>[2021] &nbsp&nbsp 1st prize of Excellent Scholarship of Academy for M.S. Fellowship.</li>
