--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
               <p>I am currently a Ph.D. student advised by <a href="https://www.chuatatseng.com/"> Prof. Chua Tat Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I finished my master study at  <a href="http://cse.whu.edu.cn">  School of Cyber Science and Engineering </a>, <a href="https://www.whu.edu.cn/">Wuhan University</a>.
               </p>
               <p>
-                Currently, my research interests lie in <strong>vision-language understanding</strong>, such as <strong>multi-modal information extraction</strong>, <strong>text-to-image generation</strong>, <strong>scene graph generation</strong>, etc.
-                Previously, I focused on syntax-aided NLP, i.e., employing the external syntactic and linguistic features to aid NLP tasks.
+                Currently, my research interests mainly lie in <strong>Scene Graph-based Vision-Language Understanding</strong>, with the contexts of <strong>Multimodal Large Language Models</strong> and <strong>Diffusion Model</strong>, etc.
+                Previously, I focused on syntax-aided NLP, i.e., employing external syntactic and linguistic representation to aid NLP tasks.
               </p> 
               
               <p align=center>
