--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <p align="center">
                 <name>Shengqiong Wu</name>
               </p>
-              <p>I am currently a Ph.D. student advised by <a href="https://www.chuatatseng.com/"> Prof. Chua Tat Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I finished my master study at  <a href="http://cse.whu.edu.cn">  School of Cyber Science and Engineering </a>, <a href="https://www.whu.edu.cn/">Wuhan University</a>.
+              <p>I am currently a Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a>a Lab, advised by <a href="https://www.chuatatseng.com/"> Prof. Chua Tat Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
               </p>
               <p>
                 Currently, my research interests mainly lie in <strong>Scene Graph-based Vision-Language Understanding</strong>, with the contexts of <strong>Multimodal Large Language Models</strong> and <strong>Diffusion Model</strong>, etc.
