--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
               <p align="center">
                 <name>Shengqiong Wu</name>
               </p>
-              <p>I am currently a Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a>a Lab, advised by <a href="https://www.chuatatseng.com/"> Prof. Chua Tat Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
+              <p>I am currently a Ph.D. candidate at <a href="https://www.nextcenter.org/">NExT++</a> Lab, advised by Prof. <a href="https://www.chuatatseng.com/">Chua Tat Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
               </p>
               <p>
-                Currently, my research interests mainly lie in <strong>Scene Graph-based Vision-Language Understanding</strong>, with the contexts of <strong>Multimodal Large Language Models</strong> and <strong>Diffusion Model</strong>, etc.
+                My research interest mainly lies in <strong>Scene Graph-based Vision-Language Understanding</strong>, with the contexts of <strong>Multimodal Large Language Models</strong> and <strong>Diffusion Model</strong>, etc.
                 Previously, I focused on syntax-aided NLP, i.e., employing external syntactic and linguistic representation to aid NLP tasks.
               </p> 
               
@@ -318,8 +318,8 @@
           <tbody><tr>
             <td width="100%" valign="middle">
               <heading>Honors &amp; Awards</heading><br><br>
-              <li>[2023] &nbsp&nbsp Research Achievement Award.</li>
-              <li>[2022] &nbsp&nbsp President's Graduate Fellowship. </li>
+              <li>[2023] &nbsp&nbsp Research Achievement Award of SoC, NUS.</li>
+              <li>[2022] &nbsp&nbsp President's Graduate Fellowship of NUS.</li>
               <li>[2022] &nbsp&nbsp Excellent Graduated Graduate Student.</li>
               <li>[2021] &nbsp&nbsp Huawei Scholarship for graduate students.</li>
               <li>[2021] &nbsp&nbsp National Scholarship for graduate students.</li>
