--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <p align="center">
                 <name>Shengqiong Wu</name>
               </p>
-              <p>I am currently a second-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Chua Tat-Seng </a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
+              <p>I am currently a second-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
               </p>
               <p>
                 My research interest mainly lies in <strong>Scene Graph-based Vision-Language Understanding</strong>, with the contexts of <strong>Multimodal Large Language Models</strong> and <strong>Diffusion Model</strong>, etc.
@@ -123,7 +123,7 @@
               </p>
             </td>
             <td width="30%">
-              <img src="images/ME.jpg" width="100%">
+              <img src="images/ME.jpg" width="80%" style="box-shadow: 0px 10px 20px rgba(0,0,0,0.19), 0px 6px 6px rgba(0,0,0,0.23);">
             </td>
           </tr>
         </table>
@@ -334,7 +334,7 @@
                       Oct. 2023 - Now &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kunlun Skywork AI</b></a>, Singapore<br>
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 2050 Research Intern <br>
                         <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <i>Crawl web-data related to financial stock. Construct knowledge graph for Smart Q&A. Employ graph database (Neo4j) for data storage.</i><br> -->
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://yanshuicheng.info/"> Yan Shuicheng, Director </a> <br>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://yanshuicheng.info/"> Shuicheng Yan, Director </a> <br>
                   </td>
       
                   <td width="30%">
@@ -382,7 +382,7 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tbody><tr>
             <td width="100%" valign="middle">
-              <heading>Honors &amp; Awards</heading><br><br
+              <heading>Honors &amp; Awards</heading><br><br>
               <li>[2024] &nbsp&nbsp <a href="https://www.sohu.com/a/754077156_132450">Scholarship (Top 10 Global Recipients)</a>, Baidu.</li>
               <li>[2023] &nbsp&nbsp Research Achievement Award of SoC, NUS.</li>
               <li>[2022] &nbsp&nbsp President's Graduate Fellowship of NUS.</li>
